Improve UI/UX, fix header overlap in dark mode, add new background image

--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,8 @@
 }
 
 .header.scrolled {
-    background-color: #f9f9f9;
+    background-color: #501A6D;
+    color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     transition: all 0.5s;
 }
@@ -66,7 +67,7 @@
 
 .menu-icon {
     font-size: 30px;
-    color: #333;
+    color: #ffffff;
     cursor: pointer;
     display: none;
 }
@@ -103,7 +104,7 @@
 
 .header-right ul li a {
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
     font-size: 16px;
     padding: 8px 12px;
     transition: color 0.3s ease-in-out;
@@ -111,6 +112,11 @@
 
 .header-right ul li a:hover {
   color: #007acc;
+}
+
+.header-right ul li a.active {
+  color: #007acc;
+  border-bottom: 2px solid #007acc;
 }
 
 
